Resolved menu's bug on iOS6 but not on android.

--- a/src/app/widgets/menu/menu.scss
+++ b/src/app/widgets/menu/menu.scss
@@ -16,16 +16,22 @@
     border-color: rgba(white, .8);
 
     .overlay {
-        position: absolute;
-        top:0; left:0; right:0; bottom:0;
+        // position: absolute;
+        // top:0; left:0; right:0; bottom:0;
+        // z-index: 5;
         background-color: rgba(black, 0);
+        width: 100%;
+        height: 100%;
+        box-sizing: content-box;
     }
 
     ul {
-        margin-top: $headerHeight;
-        margin-left: -$headerHeight;
+        position: absolute;
+        top: $headerHeight;
+        left: -$headerHeight;
         width: $headerHeight;
         list-style: none;
+        z-index: 10;
 
         li {
             margin-top: 1rem;
